- rewrite parts of parseBlastText: fixes https://github.com/sing-group/biojs-vis-blasterjs/issues/7 - improve how alignment is displayed: Next HSP button doesn't change div height anymore - update html2canvas, improve error message - remove JPG download - update css: change scroll container, button placement

--- a/examples/example.css
+++ b/examples/example.css
@@ -9,13 +9,3 @@
     padding-top: 0 !important;
     width: 100% !important;
 }
-
-#blast-single-alignment-pre {
-    padding: 0 !important;
-    color: #0d1318;
-}
-
-#query {
-    word-wrap: anywhere;
-    font-family: mono;
-}
